--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
         <div class="cv">
             <h1 class="name2">- Aigars Mozumačs -</h1>
             <h4 class="name">- programmētājs - </h2>
+            <p>Version 2</p>
             <img class="profile" src="C:\Project\Images\img.jpg" alt="cv photo">
 
             <h4>Par Mani</h4>
