--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
             <p class="aboutme">Es studēju Latvijas Universitātē, esmu 2. kursa 4. semestra students. Esmu apguvis front-end valodas HTML/CSS/JS kā arī back-end PHP. Es esmu strādājis ar dažādiem frameworks 
                 kā React, jQuery, Laravel.Pašmācības ceļā arī apguvu pamatus valodā Java. Esmu izveidojus dažus projektus, kā, piemēram, ģimenes budžeta lietotni, kuru veidoju pēc MVC principiem, 
                 izmantojot HTML/CSS/JS/Laravel, Laravel izmantoju ar blade syntax. Darbojos ne tikai ar programmēšanu, bet arī esmu darbojies ar informācijas sistēmām un datubāzēm, piemēram, MSSQL,Power BI. 
-                Brīvajā laikā nodarbojos ar svarcelšanu. Ar svarcelšanu nodarbojos jau 3 gadus. Esmu arī trenējies basketbolā un vieglatlētikā, kā arī piedalījies Draudzīgā Aicinājuma Cēsu Valsts ģimnāzijas korī.
+                Brīvajā laikā nodarbojos ar svarcelšanu. Ar svarcelšanu nodarbojos jau 3 gadus. Esmu arī trenējies basketbolā un vieglatlētikā un arī piedalījies Draudzīgā Aicinājuma Cēsu Valsts ģimnāzijas korī.
             </p>
 
             <h4 class="list">Programmēšanas valodas, kuras izmantoju vai kuras esmu izmantojis</h4>
