--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
         <div class="cv">
             <h1 class="name2">- Aigars Mozumačs -</h1>
             <h4 class="name">- programmētājs -</h2>
-            <img class="profile" src="C:\Project\Images\img.jpg" alt="cv photo">
+            <img class="profile" src="Images\img.jpg" alt="cv photo">
 
             <h4>Par Mani</h4>
             <p class="aboutme">Es studēju Latvijas Universitātē, esmu 2. kursa 4. semestra students. Esmu apguvis front-end valodas HTML/CSS/JS kā arī back-end PHP. Es esmu strādājis ar dažādiem frameworks 
@@ -41,9 +41,9 @@
             
             <div class = "contacts">
                 <h4>Kontaktinformācija saziņai</h4>
-                <p><img src="C:\Project\Images\wphone.png" alt="phone icon">&nbsp; Tālrunis - 28645424</p>
-                <p><img src="C:\Project\Images\wmail.png" alt="email icon">&nbsp; Epasts - aigarsm.2@inbox.lv</p>
-                <p><img src="C:\Project\Images\whouse.png" alt="house icon">&nbsp; Adrese - Kārļi,Kalna Vārnas, LV-4139</p>
+                <p><img src="Images\wphone.png" alt="phone icon">&nbsp; Tālrunis - 28645424</p>
+                <p><img src="Images\wmail.png" alt="email icon">&nbsp; Epasts - aigarsm.2@inbox.lv</p>
+                <p><img src="Images\whouse.png" alt="house icon">&nbsp; Adrese - Kārļi,Kalna Vārnas, LV-4139</p>
             </div>
         </div>
 
