--- a/Index.html
+++ b/Index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="achievements">
                 <h2 class="underline">Sasniegumi</h2>
-                <p>2. vieta angļu valodas runu konkursā "Neatceros nosaukumu"</p>
+                <p>2. vieta angļu valodas runu konkursā "Ievietot nosaukumu"</p>
             </div>
             <div class="extra">
                 <h2 class="underline">Papildu prasmes</h2>
