Update Styling changes and add minor content changes

--- a/Index.html
+++ b/Index.html
@@ -9,41 +9,51 @@
 
     <body>
         <div class="cv">
-            <h1 class="name2">- Aigars Mozumačs -</h1>
-            <h4 class="name">- programmētājs -</h2>
-            <img class="profile" src="Images\img.jpg" alt="cv photo">
+            <h1 class="name2">Aigars Mozumačs</h1>
+            <h4 class="name">Programmētājs</h4>
 
-            <h4>Par Mani</h4>
-            <p class="aboutme">Es studēju Latvijas Universitātē, esmu 2. kursa 4. semestra students. Esmu apguvis front-end valodas HTML/CSS/JS kā arī back-end PHP. Es esmu strādājis ar dažādiem frameworks 
-                kā React, jQuery, Laravel.Pašmācības ceļā arī apguvu pamatus valodā Java. Esmu izveidojus dažus projektus, kā, piemēram, ģimenes budžeta lietotni, kuru veidoju pēc MVC principiem, 
-                izmantojot HTML/CSS/JS/Laravel, Laravel izmantoju ar blade syntax. Darbojos ne tikai ar programmēšanu, bet arī esmu darbojies ar informācijas sistēmām un datubāzēm, piemēram, MSSQL,Power BI. 
-                Brīvajā laikā nodarbojos ar svarcelšanu. Ar svarcelšanu nodarbojos jau 3 gadus. Esmu arī trenējies basketbolā un vieglatlētikā un arī piedalījies Draudzīgā Aicinājuma Cēsu Valsts ģimnāzijas korī.
-            </p>
+            <img class="profile" src="Images/img.jpg" alt="CV foto">
 
-            <h4 class="list">Programmēšanas valodas, kuras izmantoju vai kuras esmu izmantojis</h4>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
-                <li>C++</li>
-                <li>PYTHON</li>
-                <li>JAVA</li>
-                <li>PHP</li>
-            </ul>
+            <div class="section">
+                <h4>Par Mani</h4>
+                <p class="aboutme">
+                    Esmu Latvijas Universitātes absolvents ar Bakalaura grādu. Esmu apguvis front-end valodas (HTML, CSS, JS) un arī back-end (PHP). 
+                    Esmu strādājis ar dažādiem frameworkiem kā React, jQuery, Laravel. Pašmācības ceļā apguvu Java pamatus. Universitātes laikā esmu izveidojis projektus, 
+                    piemēram, ģimenes budžeta lietotni, kas veidota pēc MVC principiem, izmantojot Laravel ar Blade sintaksi. 
+                    Esmu darbojies arī ar informācijas sistēmām un datubāzēm (MSSQL, Power BI).
+                    Darbā Corporate Solutions esmu veicis programmatūras izstrādi un piegādi dažādos projektos.
+                    Brīvajā laikā nodarbojos ar svarcelšanu (3 gadi), kā arī esmu trenējies basketbolā, vieglatlētikā un piedalījies DACVĢ korī.
+                </p>
+            </div>
 
-            <h4 class="list">Rīki,frameworks, kurus esmu izmantojis</h4>
-            <ul>
-                <li>LARAVEL</li>
-                <li>PYTORCH</li>
-                <li>MSSQL</li>
-                <li>JQUERY</li>
-            </ul>
-            
-            <div class = "contacts">
-                <h4>Kontaktinformācija saziņai</h4>
-                <p><img src="Images\wphone.png" alt="phone icon">&nbsp; Tālrunis - 28645424</p>
-                <p><img src="Images\wmail.png" alt="email icon">&nbsp; Epasts - aigarsm.2@inbox.lv</p>
-                <p><img src="Images\whouse.png" alt="house icon">&nbsp; Adrese - Kārļi,Kalna Vārnas, LV-4139</p>
+            <div class="section">
+                <h4 class="list">Programmēšanas valodas</h4>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript (JS)</li>
+                    <li>C++</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>PHP</li>
+                </ul>
+            </div>
+
+            <div class="section">
+                <h4 class="list">Rīki un Frameworki</h4>
+                <ul>
+                    <li>Laravel</li>
+                    <li>PyTorch</li>
+                    <li>MSSQL</li>
+                    <li>jQuery</li>
+                </ul>
+            </div>
+
+            <div class="contacts section">
+                <h4>Kontaktinformācija</h4>
+                <p><img src="Images/wphone.png" alt="phone icon"> Tālrunis: <strong>28645424</strong></p>
+                <p><img src="Images/wmail.png" alt="email icon"> Epasts: <strong>aigarsm.2@inbox.lv</strong></p>
+                <p><img src="Images/whouse.png" alt="house icon"> Adrese: <strong>Kārļi, Kalna Vārnas, LV-4139</strong></p>
             </div>
         </div>
 
@@ -63,21 +73,8 @@
 
             <div class="work">
                 <h2 class="underline">Darba pieredze</h2>
-
-                <h3>Cēsu Dome | dārznieks</h3>
-                <p>2015.-2016.</p>
-
-                <h3>Maxima | krāvējs</h3>
-                <p>2016.-2017.</p>
-
-                <h3>Solo | krāvējs</h3>
-                <p>2017.-2018.</p>
-
-                <h3>Latvijas Universitāte | programmētājs</h3>
-                <p>2021.-2022.</p>
-
                 <h3>Corporate Solutions | prakse,programmētājs</h3>
-                <p>2023.-...</p>
+                <p>2023.-2024(11 mēneši)</p>
             </div>
 
             <div class="languages">
@@ -97,6 +94,17 @@
                 <p>Autosports</p>
                 <p>Basketbols</p>
             </div>
+
+            <div class="skills">
+                <h2 class="underline">Programmēšanas pieredze ar valodām</h2>
+                <p>HTML5/CSS/JS</p>
+                <p>React/VueJs</p>
+                <p>Laravel</p>
+                <p>SQL(MySQL,Postgre,SQL Server)</p>
+                <p>Git</p>
+                <p>Docker</p>
+            </div>
+
             <div class="achievements">
                 <h2 class="underline">Sasniegumi</h2>
                 <p>2. vieta angļu valodas runu konkursā "Neatceros nosaukumu"</p>
