Add minor text change

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                     piemēram, ģimenes budžeta lietotni, kas veidota pēc MVC principiem, izmantojot Laravel ar Blade sintaksi. 
                     Esmu darbojies arī ar informācijas sistēmām un datubāzēm (MSSQL, Power BI).
                     Darbā Corporate Solutions esmu veicis programmatūras izstrādi un piegādi dažādos projektos.
-                    Brīvajā laikā nodarbojos ar svarcelšanu (3 gadi), kā arī esmu trenējies basketbolā, vieglatlētikā un piedalījies DACVĢ korī.
+                    Brīvajā laikā nodarbojos ar svarcelšanu, kā arī esmu trenējies basketbolā, vieglatlētikā un piedalījies DACVĢ korī.
                 </p>
             </div>
 
